# xblocks-contrib

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  create_xblock.py  eslint.config.mjs  manage.py  package-lock.json  package.json  pylintrc  pylintrc_tweaks  pyproject.toml  setup.py  test_settings.py  tox.ini  translation_settings.py
.github/workflows/: ci.yml  javascript-tests.yml  js-tests.yml  pypi-publish.yml  python-tests.yml
docs/: conf.py  index.rst  internationalization.rst
docs/decisions/: 0001-purpose-of-this-repo.rst  0002-pointer-tags-handling.rst
requirements/: base.in  base.txt  ci.txt  constraints.txt  dev.in  dev.txt  doc.in  doc.txt  pip-tools.in  pip-tools.txt  pip.txt  quality.txt  test.in  test.txt
src/xblock_annotatable/.tx/: config
src/xblock_annotatable/tests/: test_annotatable.py
src/xblock_discussion/: block.py
src/xblock_problem/: block.py
src/xblock_video/: block.py
tests/: test_annotatable.py  test_discussion.py  test_html.py  test_lti.py  test_poll.py  test_problem.py  test_video.py  test_word_cloud.py
utils/: create_xblock.sh
xblock_pdf/: __init__.py  pdf.py
xblock_pdf/tests/: test_pdf.py
xblocks_contrib/: __init__.py  poll.py  test_settings.py  translation  utils.py
xblocks_contrib/.tx/: config
xblocks_contrib/annotatable/: __init__.py  annotatable.py  translation
xblocks_contrib/common/: utils.py  xml_utils.py
xblocks_contrib/discussion/: apps.py  discussion.py  package-lock.json  package.json  webpack.common.config.js
xblocks_contrib/html/: html.py  utils.py  xml.py
xblocks_contrib/legacy_utils/: xml_utils.py
xblocks_contrib/lti/: lti.py  lti_2_util.py
xblocks_contrib/pdf/: __init__.py  pdf.py  utils.py
xblocks_contrib/poll/: __init__.py  inheritance.py  poll.py
xblocks_contrib/problem/: __init__.py  assetmgr.py  capa_block.py  django.py  fields.py  markup.py  mongo_utils.py  problem.py  progress.py  sandboxing.py  stringify.py  xmlparser.py
xblocks_contrib/utils/: load_static.py  utils.py
xblocks_contrib/video/: _transcripts_utils.py  ajax_handler_mixin.py  bumper_utils.py  cache_utils.py  constants.py  content.py  django.py  edx-ui-toolkit  exceptions.py  jasmine.common.conf.js  karma.common.conf.js  karma.conf.js  karma_runner_webpack.js  karma_xmodule_webpack.conf.js  load_static.py  mixin.py  package-lock.json  package.json  studio_metadata_mixin.py  toggles.py  transcripts_utils.py  utils.py  validation.py  video.py  video_handlers.py  video_service_utils.py  video_transcripts_utils.py  video_utils.py  video_xfields.py  webpack.common.config.js  webpack.config.js  webpack.dev.config.js  webpack.prod.config.js  x_module.py
xblocks_contrib/word_cloud/: __init__.py  translation  word_cloud.py
(+249 files in other folders)
